5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4471/executions/1592_2426.log
== TEST (2019-04-22 14:32:20) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
distancia=float(input("v/t"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:33:00) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
distancia=float(input("v*t"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:33:20) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
distancia=float(input("v*t"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:36:26) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
distancia=float(input("v*t"))
cosbustivel gasto=(float(input("distancia/12.0")))
-- ERROR:
File "XXXX", line 4
    cosbustivel gasto=(float(input()))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:36:37) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
distancia=float(input("v*t"))
cosbustivel gasto=(float(input("distancia/12")))
-- ERROR:
File "XXXX", line 4
    cosbustivel gasto=(float(input()))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:36:43) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
distancia=float(input("v*t"))
cosbustivel gasto=(float(input("distancia/12")))
-- ERROR:
File "XXXX", line 4
    cosbustivel gasto=(float(input()))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:36:43) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
distancia=float(input("v*t"))
cosbustivel gasto=(float(input("distancia/12")))
-- ERROR:
File "XXXX", line 4
    cosbustivel gasto=(float(input()))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:36:54) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
cosbustivel gasto=(float(input("distancia/12")))
-- ERROR:
File "XXXX", line 4
    cosbustivel gasto=(float(input()))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:38:31) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
combustivel gasto=(float(input("v*t/12.0")))
-- ERROR:
File "XXXX", line 4
    combustivel gasto=(float(input()))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:38:36) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
combustivel gasto=(float(input("v*t/12")))
-- ERROR:
File "XXXX", line 4
    combustivel gasto=(float(input()))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:38:49) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("v*t/12")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:40:01) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("v*t/12")))
-- EXECUTION TIME:
0.124749
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:40:49) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input(v*t/12))"km/l")
-- EXECUTION TIME:
0.19
-- ERROR:
  File "/home/codebench/codes/1592/2426/main.py", line 4
    c=(float(input(v*t/12))"km/l")
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:40:54) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input(v*t/12))"km/l")
-- EXECUTION TIME:
0.1577
-- ERROR:
  File "/home/codebench/codes/1592/2426/main.py", line 4
    c=(float(input(v*t/12))"km/l")
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:41:03) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input(v*t/12)"km/l"))
-- EXECUTION TIME:
0.190864
-- ERROR:
  File "/home/codebench/codes/1592/2426/main.py", line 4
    c=(float(input(v*t/12)"km/l"))
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:41:15) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("v*t/12")"km/l"))
-- ERROR:
File "XXXX", line 4
    c=(float(input()"km/l"))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:41:20) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("v*t/12")"km/l"))
-- ERROR:
File "XXXX", line 4
    c=(float(input()"km/l"))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:41:30) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("v*t/12")km/l"))
-- EXECUTION TIME:
0.205402
-- ERROR:
  File "/home/codebench/codes/1592/2426/main.py", line 4
    c=(float(input()km/l"))
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:41:32) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("v*t/12")km/l"))
-- ERROR:
File "XXXX", line 4
    c=(float(input()km/l"))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:42:32) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("v*t/12")))
-- EXECUTION TIME:
0.181928
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:43:00) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("(v*t)/12")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:43:05) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("(v*t)/12")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:43:09) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("(v*t)/12")))
-- EXECUTION TIME:
0.163323
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:44:06) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("(v*t)/12",km/l))
-- ERROR:
File "XXXX", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:44:21) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input("(v*t)/12"),km/l)
-- ERROR:
File "XXXX", line 5
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:44:51) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input((v*t)/12,"km/l")
-- ERROR:
File "XXXX", line 5
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:44:58) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input((v*t)/12,"km/l"))
-- ERROR:
File "XXXX", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:45:11) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input((v*t)/12,"km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:45:17) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input((v*t)/12,"km/l")))
-- EXECUTION TIME:
0.196744
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:45:36) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input(((v*t)/12,)"km/l")))
-- ERROR:
File "XXXX", line 4
    c=(float(input(((v*t)/12,)"km/l")))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:45:42) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input((v*t)/12,)"km/l")))
-- ERROR:
File "XXXX", line 4
    c=(float(input((v*t)/12,)"km/l")))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:45:48) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(float(input((v*t)/12,"km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:47:16) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(print(float(input((v*t)/12,"km/l")))
-- ERROR:
File "XXXX", line 5
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:47:23) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(print(float(input((v*t)/12,"km/l"))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:47:27) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(print(float(input((v*t)/12,"km/l"))))
-- EXECUTION TIME:
0.205519
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:47:41) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(print(input((v*t)/12,"km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:47:45) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=(print(input((v*t)/12,"km/l")))
-- EXECUTION TIME:
0.165732
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:48:41) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l")))
print(t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))))
-- ERROR:
File "XXXX", line 4
    c=float(input((v*t)/12,"km/l")))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:48:54) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))

-- EXECUTION TIME:
0.134037
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:48:56) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:49:00) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:49:19) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))
print(t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l")))

-- ERROR:
File "XXXX", line 6
    v=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:49:30) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))
print(t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l")))

-- EXECUTION TIME:
0.181783
-- ERROR:
  File "/home/codebench/codes/1592/2426/main.py", line 6
    v=float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:49:47) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))
print(float(input("tempo"))
float(input("velocidade"))
float(input("v*t"))
float(input((v*t)/12,"km/l")))

-- EXECUTION TIME:
0.131237
-- ERROR:
  File "/home/codebench/codes/1592/2426/main.py", line 6
    float(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:49:53) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))
print(float(input("tempo"))
float(input("velocidade"))
float(input("v*t"))
float(input((v*t)/12,"km/l")))

-- ERROR:
File "XXXX", line 6
    float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:49:53) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))
print(float(input("tempo"))
float(input("velocidade"))
float(input("v*t"))
float(input((v*t)/12,"km/l")))

-- ERROR:
File "XXXX", line 6
    float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:49:53) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))
print(float(input("tempo"))
float(input("velocidade"))
float(input("v*t"))
float(input((v*t)/12,"km/l")))

-- ERROR:
File "XXXX", line 6
    float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:49:53) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))
print(float(input("tempo"))
float(input("velocidade"))
float(input("v*t"))
float(input((v*t)/12,"km/l")))

-- ERROR:
File "XXXX", line 6
    float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:49:53) 
-- CODE:
t=float(input("tempo"))
v=float(input("velocidade"))
d=float(input("v*t"))
c=float(input((v*t)/12,"km/l"))
print(float(input("tempo"))
float(input("velocidade"))
float(input("v*t"))
float(input((v*t)/12,"km/l")))

-- ERROR:
File "XXXX", line 6
    float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
